feat: save in juno

--- a/angular/diary/src/app/components/home/home.component.html
+++ b/angular/diary/src/app/components/home/home.component.html
@@ -14,9 +14,7 @@
       Add an entry
     </button>
 
-    <button mat-raised-button (click)="signOut()">
-      Sign-out
-    </button>
+    <button mat-raised-button (click)="signOut()">Sign-out</button>
   </ng-container>
 
   <ng-template #notSignedIn>
