--- a/angular/diary/src/styles.scss
+++ b/angular/diary/src/styles.scss
@@ -21,3 +21,11 @@ body {
 * {
   box-sizing: border-box;
 }
+
+.mat-mdc-snack-bar-container {
+  &.error {
+    --mdc-snackbar-container-color: #ff0000;
+    --mat-mdc-snack-bar-button-color: #fff;
+    --mdc-snackbar-supporting-text-color: #fff;
+  }
+}
