--- a/angular/diary/src/app/components/modal/modal.component.html
+++ b/angular/diary/src/app/components/modal/modal.component.html
@@ -4,8 +4,15 @@
     <textarea matInput rows="5" formControlName="entry"></textarea>
   </mat-form-field>
 
+  <input type="file" (change)="onFileChanged($event)" [disabled]="diaryForm.disabled"/>
+
   <mat-toolbar-row>
-    <button type="button" mat-raised-button [disabled]="diaryForm.disabled" (click)="close()">
+    <button
+      type="button"
+      mat-raised-button
+      [disabled]="diaryForm.disabled"
+      (click)="close()"
+    >
       Close
     </button>
 
