chore: readonly and checks review

--- a/angular/diary/src/app/components/modal/modal.component.html
+++ b/angular/diary/src/app/components/modal/modal.component.html
@@ -6,6 +6,7 @@
 
   <input
     type="file"
+    accept="image/png, image/gif, image/jpeg"
     (change)="onFileChanged($event)"
     [disabled]="diaryForm.disabled"
   />
