refactor: angular 16 with signals

--- a/angular/diary/src/app/components/home/home.component.html
+++ b/angular/diary/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
     .
   </p>
 
-  <ng-container *ngIf="signedIn$ | async; else notSignedIn">
+  <ng-container *ngIf="signedIn(); else notSignedIn">
     <app-table />
 
     <button mat-raised-button color="primary" (click)="openModal()">
