--- a/angular/diary/src/app/components/table/table.component.html
+++ b/angular/diary/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="(docs$ | async)!">
+<table mat-table [dataSource]="docs()">
   <ng-container matColumnDef="key">
     <th mat-header-cell *matHeaderCellDef>Key</th>
     <td mat-cell *matCellDef="let doc">{{ doc.key }}</td>
