--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -3,7 +3,6 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
-import LoremIpsum from "../components/LoremIpsum.astro";
 ---
 
 <!doctype html>
@@ -19,7 +18,42 @@ import LoremIpsum from "../components/LoremIpsum.astro";
 				Welcome to this sample website build with <a href="https://juno.build" target="_blank" rel="noreferrer noopener">Juno</a> and <a href="https://astro.build/" target="_blank" rel="noreferrer noopener">Astro</a>.
 			</p>
 
-			<LoremIpsum />
+			<button id="insert">Insert a document</button>
+			<p style="min-height: 10em">Document persisted key: <output id="result"></output></p>
+
+			<script>
+				import {initJuno, setDoc} from "@junobuild/core";
+
+				// Initialize Juno
+				document.addEventListener(
+					"DOMContentLoaded",
+					async () => {
+						await initJuno({
+							satelliteId: "nkzsw-gyaaa-aaaal-ada3a-cai",
+						});
+					},
+					{ once: true }
+				);
+
+				const insert = async () => {
+					const doc = await setDoc({
+						collection: "demo",
+						doc: {
+							key: `my-key-${new Date().getTime()}`,
+							data: {
+								hello: "world",
+							},
+						},
+					});
+
+					const result = document.querySelector('#result');
+					if (result !== null) {
+						result.textContent = doc.key;
+					}
+				};
+
+				document.querySelector('#insert')?.addEventListener("click", insert, {passive: true})
+			</script>
 		</main>
 		<Footer />
 	</body>
