--- a/astro/src/pages/about.astro
+++ b/astro/src/pages/about.astro
@@ -1,13 +1,13 @@
 ---
-import Layout from '../layouts/BlogPost.astro';
+import Layout from "../layouts/BlogPost.astro";
 import LoremIpsum from "../components/LoremIpsum.astro";
 ---
 
 <Layout
-	title="About Me"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
-	heroImage="/blog-placeholder-about.jpg"
+  title="About Me"
+  description="Lorem ipsum dolor sit amet"
+  pubDate={new Date("August 08 2021")}
+  heroImage="/blog-placeholder-about.jpg"
 >
-	<LoremIpsum />
+  <LoremIpsum />
 </Layout>
