--- a/astro/src/pages/404.astro
+++ b/astro/src/pages/404.astro
@@ -16,11 +16,12 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
       <p>404</p>
     </main>
     <Footer />
-  </body><style>
-    p {
-      font-size: 10rem;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+    <style>
+      p {
+        font-size: 10rem;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </body>
 </html>
