--- a/react/diary/src/index.css
+++ b/react/diary/src/index.css
@@ -3,17 +3,17 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'Inter';
-    src: url('/fonts/inter-v13-latin-regular.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-    font-display: block;
+  font-family: "Inter";
+  src: url("/fonts/inter-v13-latin-regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: block;
 }
 
 @font-face {
-    font-family: 'Inter';
-    src: url('/fonts/inter-v13-latin-600.woff2') format('woff2');
-    font-weight: 600;
-    font-style: normal;
-    font-display: block;
+  font-family: "Inter";
+  src: url("/fonts/inter-v13-latin-600.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: block;
 }
